syntax = "proto3";

package api;

option go_package = "github.com/KirillMironov/ai/api";

service Authenticator {
  rpc SignUp (SignUpRequest) returns (SignUpResponse) {}
  rpc SignIn (SignInRequest) returns (SignInResponse) {}
}

message SignUpRequest {
  string username = 1;
  string password = 2;
}

message SignUpResponse {
  string token = 1;
}

message SignInRequest {
  string username = 1;
  string password = 2;
}

message SignInResponse {
  string token = 1;
}
